--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ src/data/
 dvclive
 dvc.yaml
 .dvcignore
+src/lightningmodules/__pycache__/
+src/loaders/__pycache__/
+src/models/__pycache__/
+src/workflow/__pycache__/
